# agent-architect

./: .gitignore  .mcp.json-template  agent-architect.opam  dune  dune-project  jest.config.js  package-lock.json  package.json
.serena/: project.yml
.serena/memories/: agent_evaluation_system_overview.md  ast_parser_implementation_details  best_practices.md  code_style.md  code_style_updated.md  codebase_structure.md  debugging_tips.md  design_patterns.md  js_bindings_best_practices.md  langchain_graph_agent_patterns.md  langchain_langgraph_bindings.md  melange_javascript_bindings  project_purpose.md  queue_system_issues_identified.md  server_architecture_patterns.md  suggested_commands.md  system_operation_commands.md  task_completion.md  tech_stack.md  test_commands.md  testing_framework_implementation.md  testing_patterns_melange_reasonml
docs/: Agent.md  README.md  ROUGH_THOUGHTS.md
scripts/: run-chat.sh
src/: dune
src/agent-eval/: EVOLUTION_PLAN.md  IMPLEMENTATION_PLAN.md  README copy.md  README.md  ROUGH_IDEAS.md  SYSTEM_OPERATIONS_GUIDE.md  TESTING_FRAMEWORK_PLAN.md  demo_self_contained_evaluation.py  generate_mbpp_tasks.py
src/agent-eval/agent-src/: agent.py  docker-compose.yml
src/agent-eval/tests/: run_tests.py
src/agent-impl/: README.md
src/bindings/: BabelParser.re  ChromaDb.re  LanceDb.re  LangChain.re  NodeJs.re  OpenRouter.re  TypeScriptParser.re  dune
src/core/: Agent.re  dune
src/effects/: AstParser.re  CodebaseDiscovery.re  FileSystem.re  Git.re  dune
src/eval/: CompilationCheck.re  Digest.re  GenerateFiles.re  GradeOutcome.re  Ingest.re  InputFileStructure.re  Process.re  README.md  Shared.re  dune
src/exe/: Chat_Interf.re  Chat_Simple.re  Emitter.re  EvalMbpp.re  EvalMbpp_GeminiFlash.re  EvalMbpp_Mistral.re  EvalMbpp_Validate.re  dune
src/model/: Agent.re  Chat.re  Gemini.re  Graph.re  Providers.re  Server.re  dune
src/models/: Agent.re  dune
src/test-utils/: Test.re  dune
src/utils/: DateUtils.re  IOUtils.re  JsonUtils.re  NumberUtils.re  StringUtils.re  dune
(+113 files in other folders)
