; (include_subdirs unqualified)

(dirs :standard __tests__)

(library
 (name exe)
 (modes melange)
 (libraries relude model bindings eval)
 (melange.compile_flags :standard -open Relude.Globals)
 (preprocess
  (pps melange.ppx)))

; (melange.emit
;  (target test-process)
;  (libraries exe)
;  (modules TestProcess))
